edito el onclick en html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
             <div class="botones">
                 <p>❗ Solo letras minùsculas y sin acentos</p>
-                <button class="Encriptar" onclick="encript()">Encriptar</button>
-                <button class="Desencriptar" onclick="desencript()">Desencriptar</button>
+                <button class="Encriptar">Encriptar</button>
+                <button class="Desencriptar">Desencriptar</button>
             </div>
         </section>
         <section class="salidaTexto">
